[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rag_project"
version = "0.0.1"
description = "Avoir \u00e0 disposition un LLM capable de r\u00e9pondre \u00e0 nos questions sur une BDD sp\u00e9cifique"
authors = [
  { name = "nathalie-pizon" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.8.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rag_project"]
force_sort_within_sections = true
